# papito

./: .gitignore  .travis.yml  Cargo.toml  README.md
goatdom/: Cargo.toml
goatdom/src/: lib.rs  vdiff.rs  velement.rs  vlist.rs  vnode.rs  vtext.rs
papito/: Cargo.toml
papito/src/: lib.rs
papito_codegen/: Cargo.toml
papito_codegen/src/: common.rs  component.rs  event.rs  events.rs  lib.rs  render.rs
papito_codegen/tests/: component.rs
papito_dom/: Cargo.toml
papito_dom/src/: events.rs  lib.rs  traits.rs  vcomponent.rs  vdiff.rs  velement.rs  vlist.rs  vnode.rs  vtext.rs
