[package]
name = "papito_codegen"
version = "0.1.1"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]
description = "Codegen for the Papito WASM Framework"
documentation = "https://docs.rs/papito_codegen"
homepage = "https://github.com/csharad/papito"
repository = "https://github.com/csharad/papito"
readme = "../README.md"
keywords = ["papito", "web", "framework", "wasm", "codegen"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.12.14", features = ["full", "extra-traits"] }
quote = "0.4.2"
proc-macro2 = { version = "0.2.3" }
heck = "0.3.0"

[dev-dependencies]
papito = "0.1.1"
papito_dom = "0.1.1"
stdweb = "0.4.2"